I updated game.html and removed all unnecessary logs

--- a/game.html
+++ b/game.html
@@ -1480,40 +1480,37 @@
                       console.log('DRAW')
                     }
                     else {
-                      console.log('You lost');
-                      console.log(id_element);
+                      console.log('You lost this round');
+                
                       if (deckOfCards.length <= 1) {
                         document.getElementById('collection_of_cards').style.display = 'none';
                         help.style.display = 'none';
                         document.getElementById('YouJustLost').style.display = 'block';
                       }
                       if (id_element == 'card1') {
-                        console.log('card1');
-                        countDown  ++; console.log(deckOfCards.length)
+                        
+                        countDown  ++
                         deleteCard1();
                         deckOfCards.splice(0, 1);
                       }
                       else if (id_element == 'card2') {
                         deleteCard2();
-                        countDown  ++; console.log(deckOfCards.length)
-                        console.log('card2');
+                        countDown  ++
                         deckOfCards.splice(0, 1);
                       }
                       else if (id_element == 'card3') {
                         deleteCard3();
-                        countDown  ++; console.log(deckOfCards.length)
-                        console.log('card3');
+                        countDown  ++
                         deckOfCards.splice(0, 1);
                       }
                       else if (id_element == 'card4') {
                         deleteCard4();
-                        countDown  ++; console.log(deckOfCards.length)
-                        console.log('card4');
+                        countDown  ++
                         deckOfCards.splice(0, 1);
                       }
                       else {
                         deleteCard5();
-                        countDown  ++; console.log(deckOfCards.length)
+                        countDown  ++
                         deckOfCards.splice(0, 1);
                       }
                     }
@@ -1540,40 +1537,35 @@
                     console.log('DRAW')
                   }
                   else {
-                    console.log('You lost');
-                    console.log(id_element);
+                    console.log('You lost this round');
                     if (deckOfCards.length <= 1) {
                       document.getElementById('collection_of_cards').style.display = 'none';
                       document.getElementById('YouJustLost').style.display = 'block';
                       help.style.display = 'none';
                     }
                     if (id_element == 'card1') {
-                      console.log('card1');
-                      countDown  ++; console.log(deckOfCards.length)
+                      countDown  ++;
                       deleteCard1();
                       deckOfCards.splice(0, 1);
                     }
                     else if (id_element == 'card2') {
                       deleteCard2();
-                      countDown  ++; console.log(deckOfCards.length)
-                      console.log('card2');
+                      countDown  ++
                       deckOfCards.splice(0, 1);
                     }
                     else if (id_element == 'card3') {
                       deleteCard3();
-                      countDown  ++; console.log(deckOfCards.length)
-                      console.log('card3');
+                      countDown  ++
                       deckOfCards.splice(0, 1);
                     }
                     else if (id_element == 'card4') {
                       deleteCard4();
-                      countDown  ++; console.log(deckOfCards.length)
-                      console.log('card4');
+                      countDown  ++
                       deckOfCards.splice(0, 1);
                     }
                     else {
                       deleteCard5();
-                      countDown  ++; console.log(deckOfCards.length)
+                      countDown  ++
                       deckOfCards.splice(0, 1);
                     }
                   }
@@ -1599,41 +1591,36 @@
                       console.log('DRAW')
                     }
                     else {
-                      console.log('You lost');
-                      console.log(id_element);
+                      console.log('You lost this round');
                       if (deckOfCards.length <= 1) {
                         document.getElementById('collection_of_cards').style.display = 'none';
                         document.getElementById('YouJustLost').style.display = 'block';
                         help.style.display = 'none';
                       }
                       if (id_element == 'card1') {
-                        console.log('card1');
                         deleteCard1();
                         deckOfCards.splice(0, 1);
-                        countDown  ++; console.log(deckOfCards.length)
+                        countDown  ++
                       }
                       else if (id_element == 'card2') {
                         deleteCard2();
-                        console.log('card2');
                         deckOfCards.splice(0, 1);
-                        countDown  ++; console.log(deckOfCards.length)
+                        countDown  ++
                       }
                       else if (id_element == 'card3') {
                         deleteCard3();
-                        countDown  ++; console.log(deckOfCards.length)
-                        console.log('card3');
+                        countDown  ++
                         deckOfCards.splice(0, 1);
                       }
                       else if (id_element == 'card4') {
                         deleteCard4();
-                        countDown  ++; console.log(deckOfCards.length)
-                        console.log('card4');
+                        countDown  ++
                         deckOfCards.splice(0, 1);
                       }
                       else {
                         deleteCard5();
                         deckOfCards.splice(0, 1);
-                        countDown  ++; console.log(deckOfCards.length)
+                        countDown  ++
                       }
                     }
                 }
