Update game.html (2)

--- a/game.html
+++ b/game.html
@@ -956,7 +956,7 @@
                         <ul id="help-info">
                             <li>Pick any of your 3 Pokemon Cards to face off against the Computer</li>
                             <li>Choose any of the skills of any one of your Pokemon to face off against the skills of one of the Computer's Pokemon</li>
-                            <li>If you win, you get the Pokemon card and vice versa</li>
+                            <li>If you win, you get the Pokemon card and if you lose the card goes back to the deck of cards.</li>
                             <li>The game continues until either you have gained all the Computer's cards or you have lost all your cards</li>
                             <li>OH! And once you have used a skill of your Pokemon to win, that skill dissappears.</li>
                             <li>Most suitable for desktop computers or laptops but still playable on mobile phones.</li>
